--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,6 +39,12 @@
       "purpose": "maskable"
     },
     {
+      "src": "/images/icon-192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "/images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
@@ -49,6 +55,12 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "/images/icon-512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "categories": ["fitness", "health", "lifestyle"],
